--- a/tryhaskell.cabal
+++ b/tryhaskell.cabal
@@ -17,13 +17,16 @@ data-files:          Imports.hs
                      static/css/fonts/Haskell.ttf
                      static/css/fonts/Haskell.woff
                      static/css/tryhaskell.css
+                     static/css/tutorial1.css
                      static/js/jquery.console.js
                      static/js/tryhaskell.js
                      static/js/tryhaskell.pages.js
+                     static/js/tutorial1.js
+                     static/js/tutorial1.pages.js
 
 library
   exposed-modules:   TryHaskell
-  other-modules:     Paths_tryhaskell
+  other-modules:     Paths_tryhaskell, TryHaskell.BuildPage, TryHaskell.Tutorials
   hs-source-dirs:    src/
   ghc-options:       -Wall
   build-depends:     QuickCheck
@@ -54,7 +57,7 @@ executable tryhaskell
   hs-source-dirs:    src/main
   main-is:           Main.hs
   build-depends:     base, tryhaskell
-  ghc-options:       -Wall -O2 -threaded
+  ghc-options:       -O2 -threaded -fno-warn-deprecations
 
 test-suite test
     type: exitcode-stdio-1.0
