--- a/tryhaskell.cabal
+++ b/tryhaskell.cabal
@@ -18,11 +18,14 @@ data-files:          Imports.hs
                      static/css/fonts/Haskell.woff
                      static/css/tryhaskell.css
                      static/css/tutorial1.css
+                     static/css/tutorial2.css
                      static/js/jquery.console.js
                      static/js/tryhaskell.js
                      static/js/tryhaskell.pages.js
                      static/js/tutorial1.js
                      static/js/tutorial1.pages.js
+                     static/js/tutorial2.js
+                     static/js/tutorial2.pages.js
 
 library
   exposed-modules:   TryHaskell
