--- a/tryhaskell.cabal
+++ b/tryhaskell.cabal
@@ -38,7 +38,7 @@ library
   exposed-modules:   TryHaskell
   other-modules:     Paths_tryhaskell, TryHaskell.BuildPage, TryHaskell.Tutorials
   hs-source-dirs:    src/
-  ghc-options:       -Wall
+  ghc-options:       -Wall -rtsopts
   build-depends:     QuickCheck
                    , aeson >= 0.8.0.1
                    , base >= 4 && < 5
@@ -67,7 +67,7 @@ executable tryhaskell
   hs-source-dirs:    src/main
   main-is:           Main.hs
   build-depends:     base, tryhaskell
-  ghc-options:       -O2 -threaded -fno-warn-deprecations
+  ghc-options:       -O2 -rtsopts -threaded -fno-warn-deprecations
 
 test-suite test
     type: exitcode-stdio-1.0
